--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_BASE_URL =https://cardpay-dev.xcp.xrob.com.ar/api 
+VITE_API_BASE_URL =https://mydash-backend-kcqy.onrender.com
+VITE_AUTH_TOKEN =Leo32853344
