--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@tanstack/match-sorter-utils": "^8.8.4",
     "@tanstack/react-table": "^8.8.5",
     "@visx/pattern": "^3.0.0",
-    "apexcharts": "^3.37.3",
+    "apexcharts": "^4.7.0",
     "axios": "^1.3.4",
     "chart.js": "^4.4.2",
     "classnames": "^2.3.2",
@@ -47,7 +47,7 @@
     "lodash": "^4.17.21",
     "miragejs": "^0.1.48",
     "react": "^18.2.0",
-    "react-apexcharts": "^1.4.0",
+    "react-apexcharts": "^1.7.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "^18.2.0",
@@ -63,13 +63,14 @@
     "react-router-dom": "^6.9.0",
     "react-scroll": "^1.8.9",
     "react-select": "^5.7.2",
-    "react-simple-maps": "^3.0.0",
-    "react-syntax-highlighter": "^15.5.0",
+    "react-simple-maps": "^1.0.0",
+    "react-syntax-highlighter": "^15.6.6",
     "react-tooltip": "^5.11.1",
     "recharts": "^2.12.2",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.8",
     "twin.macro": "^3.4.0",
+    "xlsx": "^0.18.5",
     "yup": "^1.1.1"
   },
   "devDependencies": {
@@ -110,7 +111,7 @@
     "rollup-plugin-postcss": "^4.0.2",
     "tailwindcss": "^3.4.0",
     "typescript": "^4.9.3",
-    "vite": "^5.0.10",
+    "vite": "^7.1.4",
     "vite-plugin-dynamic-import": "^1.5.0"
   }
 }
